@@ -1,3 +1,4 @@
+5/8/2012 #3326 Converted from InternalError to HeadlessException in catch block
 5/8/2012 #3326 Provide headless support for FrameSetup so that it can be created without crashing the build process on Ubuntu
 5/3/2012 #3320 Fixed: equality test is incorrect for ObservableList
 4/12/12 #3303 replace Java 1.6 calls with Java 1.5 workaround to implement nearest-neighbor rounding in DefaultDecimalFormat
